# ericminassian.com

./: Cargo.toml  package.json  pnpm-lock.yaml
.github/workflows/: deploy-api.yml  deploy-web.yml  preview.yml  production.yml
.github/workflows/previews/: api.yml  web.yml
.github/workflows/productions/: api.yml  web.yml
apps/api/: Cargo.toml  package.json
apps/api/api/: [...all].rs  foo.rs  main.rs
apps/web/: package.json
